--- a/docs/5/sketchy/bootstrap.css
+++ b/docs/5/sketchy/bootstrap.css
@@ -12108,6 +12108,36 @@ textarea.form-control-lg {
   opacity: 0;
 }
 
+[data-bs-theme=dark] .btn-primary {
+  --bs-btn-bg: #f8f9fa;
+  --bs-btn-hover-bg: #dee2e6;
+  --bs-btn-active-bg: #ccc;
+  --bs-btn-disabled-bg: #aaa;
+  --bs-btn-color: #000;
+  --bs-btn-hover-color: #000;
+  --bs-btn-active-color: #000;
+  --bs-btn-disabled-color: #000;
+}
+
+[data-bs-theme=dark] .btn-outline-primary {
+  --bs-btn-hover-bg: #dee2e6;
+  --bs-btn-active-bg: #f8f9fa;
+  --bs-btn-disabled-bg: #aaa;
+  --bs-btn-border-color: #f8f9fa;
+  --bs-btn-hover-border-color: #dee2e6;
+  --bs-btn-active-border-color: #f8f9fa;
+  --bs-btn-disabled-border-color: #aaa;
+  --bs-btn-color: #f8f9fa;
+  --bs-btn-hover-color: #000;
+  --bs-btn-active-color: #000;
+  --bs-btn-disabled-color: #000;
+}
+
+[data-bs-theme=dark] .btn-outline-secondary,
+[data-bs-theme=dark] .btn-outline-dark {
+  --bs-btn-color: #fff;
+}
+
 button,
 input,
 optgroup,
@@ -12272,6 +12302,25 @@ select.form-control {
   border: 2px solid #aaa;
 }
 
+[data-bs-theme=dark] [type=radio]::before {
+  border-color: #fff;
+}
+[data-bs-theme=dark] [type=radio]:checked::before {
+  background-color: #fff;
+}
+[data-bs-theme=dark] [type=checkbox]::before {
+  border-color: #fff;
+}
+[data-bs-theme=dark] [type=checkbox]:checked::before {
+  background-color: #fff;
+}
+[data-bs-theme=dark] .form-range::-webkit-slider-thumb {
+  background-color: #fff;
+}
+[data-bs-theme=dark] .form-range:disabled::-webkit-slider-thumb {
+  background-color: #555;
+}
+
 .form-check-input:focus {
   box-shadow: none;
 }
@@ -12381,6 +12430,10 @@ select.form-control {
 .progress {
   border: 2px solid #333;
   border-radius: 255px 25px 225px 25px/25px 225px 25px 255px;
+}
+
+[data-bs-theme=dark] .progress, [data-bs-theme=dark] .progress-stacked {
+  background-color: #555;
 }
 
 .card {
